[package]
authors = ["Augustus Mayo <gusmayo@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
name = "envfmt"
version = "0.4.0"

[badges]
circle-ci = {repository = "augustuswm/envfmt"}

[profile.release]
panic = "abort"

[dependencies]
aws-config = "0.2.0"
aws-sdk-ssm = "0.2.0"
aws-sdk-sts = "0.2.0"
aws-types = "0.2.0"
dotenv = "0.15.0"
structopt = "0.2.14"
tokio = "1.14.0"
tracing = "0.1.29"
tracing-subscriber = "0.3.3"

[dev-dependencies]
rusoto_mock = "0.30.0"
