[package]
authors = ["Augustus Mayo <gusmayo@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
name = "envfmt"
version = "0.5.0"

[badges]
circle-ci = {repository = "augustuswm/envfmt"}

[profile.release]
panic = "abort"

[dependencies]
async-trait = "0.1.52"
aws-config = "0.2.0"
aws-sdk-ssm = "0.2.0"
aws-sdk-sts = "0.2.0"
aws-types = "0.2.0"
clap = {version = "3", features = ["derive"]}
dotenv = "0.15.0"
tokio = {version = "1.14.0", features = ["full"]}
tracing = "0.1.29"
tracing-subscriber = "0.3.3"

[dev-dependencies]
serde = {version = "1.0.131", features = ["derive"]}
serde_json = "1.0.73"
